@@ -1,3 +1,4 @@
+* Add create/delete field access
 * Add dynamic size limit on the One2Many, Many2Many and Char
 * Replace __tryton__.py by tryton.cfg
 * Allow to use Reference field in One2Many & Many2Many
